server/compilers/goLiteJS/src/test/ml1/invalid/struct5.go
// missing brackets in struct declaration
package main

type point struct
        x, y, z int
